Update content and styles

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,17 +1,22 @@
 /* Colors */
-$main-color: #F58121;
+$main-color: #FFA200;
+$main-color-darker: #F58220;
 $secondary-color: rgb(89, 194, 230);
 $font-color: grey;
+$green: #04AE00;
+$red: #FF0000;
+$link-color: #56819F;
+$light-grey-1: #F5F5F2;
+$light-grey-2: #E3E3E3;
+$light-grey-3: #979797;
+$dark-grey: #333333;
 
 /* Font sizes */
 $paragraph-font-size: 16px;
 
-/* Fonts */
-$brand-font: "Open Sans", Helvetica, Arial;
-$paragraph-font: "Open Sans", Helvetica, Arial;
-
-/* Section margin */
+/* Margins */
 $section-margin: 40px;
+$element-margin: 20px;
 
 /* Line height */
 $line-height: 1.5;
