--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,8 +5,21 @@
 
 /* Components */
 @import "components/icon";
+@import "components/table row";
+@import "components/button";
+@import "components/section-heading";
+@import "components/sidebar intro";
+@import "components/form-field-area";
+@import "components/form-field-checkbox";
+@import "components/form-field-dropdown";
+@import "components/form-field-scale";
+@import "components/scroll-bar";
+@import "components/notification-bubble";
+@import "components/modal";
 
 /* Sections */
 @import "sections/sidebar";
-
-/* Pages / Views */
+@import "sections/general statistic";
+@import "sections/topbar";
+@import "sections/postback";
+@import "sections/links";
