--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -5,21 +5,35 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: lightblue;
-    font-family: FONT;
+    background-color: $light-grey-1;
+    font-family: 'Open Sans', sans-serif;
+    color: grey;
 }
 
 .container {
     width: 100%;
-    max-width: 1200px;
+    max-width: 1170px;
     margin: 0 auto;
     display: flex;
+    padding: 0 20px;
+}
+
+.container-fluid {
+    width: 100%;
+    padding: 0 20px;
 }
 
 .container-box {
-    padding: 40px;
+    display: flex;
+    justify-content: center;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     background-color: white;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px 0;
+    + .first {
+        margin-bottom: 0;
+    }
 }
 
 /*
@@ -28,7 +42,7 @@ body {
 
 [class*="col-"] {
     width: 100%;
-    padding: 20px;
+    padding: 0 20px;
 }
 
 .row {
@@ -37,68 +51,317 @@ body {
 }
 
 /*
-* === columns: width ===
+* === columns: width SM ===
 */
 
-@media (max-width: 767px){
-    .col-s-1 {width: 8.33%;}
-    .col-s-2 {width: 16.66%;}
-    .col-s-3 {width: 25%;}
-    .col-s-4 {width: 33.33%;}
-    .col-s-5 {width: 41.66%;}
-    .col-s-6 {width: 50%;}
-    .col-s-7 {width: 58.33%;}
-    .col-s-8 {width: 66.66%;}
-    .col-s-9 {width: 75%;}
-    .col-s-10 {width: 83.33%;}
-    .col-s-11 {width: 91.66%;}
-    .col-s-12 {width: 100%;}
+.col-sm-1 {
+    flex: 0 0 8.33333%;
+    max-width: 8.33333%;
 }
-@media (min-width: 768px) {
-    .col-m-1 {width: 8.33%;}
-    .col-m-2 {width: 16.66%;}
-    .col-m-3 {width: 25%;}
-    .col-m-4 {width: 33.33%;}
-    .col-m-5 {width: 41.66%;}
-    .col-m-6 {width: 50%;}
-    .col-m-7 {width: 58.33%;}
-    .col-m-8 {width: 66.66%;}
-    .col-m-9 {width: 75%;}
-    .col-m-10 {width: 83.33%;}
-    .col-m-11 {width: 91.66%;}
-    .col-m-12 {width: 100%;}
+
+.col-sm-2 {
+    flex: 0 0 16.66667%;
+    max-width: 16.66667%;
+}
+
+.col-sm-3 {
+    flex: 0 0 25%;
+    max-width: 25%;
+}
+
+@for $i from 1 through 12 {
+    .col-sm-#{$i} {
+        $width: 100% / 12 * $i;
+        flex: 0 0 $width;
+        max-width: $width;
+    }
+}
+
+@mixin grid($prefix) {              // ASK OSKAR HOW DOES IT WORK
+    @for $i from 1 through 12 {
+        .col-#{$prefix}-#{$i} {
+            $width: 100% / 12 * $i;
+            flex: 0 0 $width;
+            max-width: $width;
+        }
+    }
 }
 
 /*
-* === columns: offset ===
+* === columns: width MD ===
 */
 
-@media (max-width: 767px){
-    .col-offset-s-0 {margin-left: 0}
-    .col-offset-s-1 {margin-left: 8.33%;}
-    .col-offset-s-2 {margin-left: 16.66%;}
-    .col-offset-s-3 {margin-left: 25%;}
-    .col-offset-s-4 {margin-left: 33.33%;}
-    .col-offset-s-5 {margin-left: 41.66%;}
-    .col-offset-s-6 {margin-left: 50%;}
-    .col-offset-s-7 {margin-left: 58.33%;}
-    .col-offset-s-8 {margin-left: 66.66%;}
-    .col-offset-s-9 {margin-left: 75%;}
-    .col-offset-s-10 {margin-left: 83.33%;}
-    .col-offset-s-11 {margin-left: 91.66%;}
-    .col-offset-s-12 {margin-left: 100%;}
+.col-md-1 {
+    flex: 0 0 8.33333%;
+    max-width: 8.33333%;
 }
-@media (min-width: 768px) {
-    .col-offset-m-1 {margin-left: 8.33%;}
-    .col-offset-m-2 {margin-left: 16.66%;}
-    .col-offset-m-3 {margin-left: 25%;}
-    .col-offset-m-4 {margin-left: 33.33%;}
-    .col-offset-m-5 {margin-left: 41.66%;}
-    .col-offset-m-6 {margin-left: 50%;}
-    .col-offset-m-7 {margin-left: 58.33%;}
-    .col-offset-m-8 {margin-left: 66.66%;}
-    .col-offset-m-9 {margin-left: 75%;}
-    .col-offset-m-10 {margin-left: 83.33%;}
-    .col-offset-m-11 {margin-left: 91.66%;}
-    .col-offset-m-12 {margin-left: 100%;}
+
+.col-md-2 {
+    flex: 0 0 16.66667%;
+    max-width: 16.66667%;
+}
+
+.col-md-3 {
+    flex: 0 0 25%;
+    max-width: 25%;
+}
+
+@for $i from 1 through 12 {
+    .col-md-#{$i} {
+        $width: 100% / 12 * $i;
+        flex: 0 0 $width;
+        max-width: $width;
+    }
+}
+
+@mixin grid($prefix) {  
+    @for $i from 1 through 12 {
+        .col-#{$prefix}-#{$i} {
+            $width: 100% / 12 * $i;
+            flex: 0 0 $width;
+            max-width: $width;
+        }
+    }
+}
+
+/*
+* === columns: width LG ===
+*/
+
+.col-lg-1 {
+    flex: 0 0 8.33333%;
+    max-width: 8.33333%;
+}
+
+.col-lg-2 {
+    flex: 0 0 16.66667%;
+    max-width: 16.66667%;
+}
+
+.col-lg-3 {
+    flex: 0 0 25%;
+    max-width: 25%;
+}
+
+@for $i from 1 through 12 {
+    .col-lg-#{$i} {
+        $width: 100% / 12 * $i;
+        flex: 0 0 $width;
+        max-width: $width;
+    }
+}
+
+@mixin grid($prefix) {  
+    @for $i from 1 through 12 {
+        .col-#{$prefix}-#{$i} {
+            $width: 100% / 12 * $i;
+            flex: 0 0 $width;
+            max-width: $width;
+        }
+    }
+}
+
+/*
+* === columns: width XL ===
+*/
+
+.col-xl-1 {
+    flex: 0 0 8.33333%;
+    max-width: 8.33333%;
+}
+
+.col-xl-2 {
+    flex: 0 0 16.66667%;
+    max-width: 16.66667%;
+}
+
+.col-xl-3 {
+    flex: 0 0 25%;
+    max-width: 25%;
+}
+
+@for $i from 1 through 12 {
+    .col-xl-#{$i} {
+        $width: 100% / 12 * $i;
+        flex: 0 0 $width;
+        max-width: $width;
+    }
+}
+
+@mixin grid($prefix) {  
+    @for $i from 1 through 12 {
+        .col-#{$prefix}-#{$i} {
+            $width: 100% / 12 * $i;
+            flex: 0 0 $width;
+            max-width: $width;
+        }
+    }
+}
+
+/*
+* === columns: offset SM ===
+*/
+
+.col-offset-sm-1 {
+    margin-left: 8.33333%;
+}
+
+.col-offset-sm-2 {
+    margin-left: 16.66667%;
+}
+
+.col-offset-sm-3 {
+    margin-left: 25%;
+}
+
+@for $i from 1 through 12 {
+    .col-offset-sm-#{$i} {
+        $margin-left: 100% / 12 * $i;
+        margin-left: $margin-left;
+    }
+}
+
+@mixin grid($prefix) {
+    @for $i from 1 through 12 {
+        .col-offset-#{$prefix}-#{$i} {
+            $margin-left: 100% / 12 * $i;
+            margin-left: $margin-left;
+        }
+    }
+}
+
+/*
+* === columns: offset MD ===
+*/
+
+.col-offset-md-1 {
+    margin-left: 8.33333%;
+}
+
+.col-offset-md-2 {
+    margin-left: 16.66667%;
+}
+
+.col-offset-md-3 {
+    margin-left: 25%;
+}
+
+@for $i from 1 through 12 {
+    .col-offset-md-#{$i} {
+        $margin-left: 100% / 12 * $i;
+        margin-left: $margin-left;
+    }
+}
+
+@mixin grid($prefix) {
+    @for $i from 1 through 12 {
+        .col-offset-#{$prefix}-#{$i} {
+            $margin-left: 100% / 12 * $i;
+            margin-left: $margin-left;
+        }
+    }
+}
+
+/*
+* === columns: offset LG ===
+*/
+
+.col-offset-lg-1 {
+    margin-left: 8.33333%;
+}
+
+.col-offset-lg-2 {
+    margin-left: 16.66667%;
+}
+
+.col-offset-lg-3 {
+    margin-left: 25%;
+}
+
+@for $i from 1 through 12 {
+    .col-offset-lg-#{$i} {
+        $margin-left: 100% / 12 * $i;
+        margin-left: $margin-left;
+    }
+}
+
+@mixin grid($prefix) {
+    @for $i from 1 through 12 {
+        .col-offset-#{$prefix}-#{$i} {
+            $margin-left: 100% / 12 * $i;
+            margin-left: $margin-left;
+        }
+    }
+}
+
+/*
+* === columns: offset XL ===
+*/
+
+.col-offset-xl-1 {
+    margin-left: 8.33333%;
+}
+
+.col-offset-xl-2 {
+    margin-left: 16.66667%;
+}
+
+.col-offset-xl-3 {
+    margin-left: 25%;
+}
+
+@for $i from 1 through 12 {
+    .col-offset-xl-#{$i} {
+        $margin-left: 100% / 12 * $i;
+        margin-left: $margin-left;
+    }
+}
+
+@mixin grid($prefix) {
+    @for $i from 1 through 12 {
+        .col-offset-#{$prefix}-#{$i} {
+            $margin-left: 100% / 12 * $i;
+            margin-left: $margin-left;
+        }
+    }
+}
+
+/*
+* === media queries GRID ===
+*/
+
+@media(max-width: 767px) {
+    @include grid('sm');
+}
+
+@media(min-width: 768px) {
+    @include grid('md');
+}
+
+@media(min-width: 992px) {
+    @include grid('lg');
+}
+
+@media(min-width: 1200px) {
+    @include grid('xl');
+}
+
+/*
+* === media queries LAYOUT ===
+*/
+
+@media(min-width: 992px) {
+    .container-box {
+        + .first {
+            margin-top: 80px;
+        }
+    };
+}
+
+@media(min-width: 1200px) {
+    .container-box {
+        + .first {
+            margin-top: 80px;
+        }
+    };
 }
