--- a/sass/sections/_sidebar.scss
+++ b/sass/sections/_sidebar.scss
@@ -1,47 +1,201 @@
-.sidebar {
-    position: fixed;
-    background-color: #191919;
-    margin: 0;
-    color: $font-color;
-    .logo {
-        font-family: 'Bubblegum Sans', cursive;
-        font-size: 24px;
-    }
-    nav {
-        ul {    
-            display: none;
-            list-style-type: none;
-            li {
-                margin: auto 0;
-                position: relative;
-                span {
-                    display: none;
-                }
-                &:hover {
-                    background-color: #282828;
-                    color: white;
-                    span {
-                        display: visible;
-                        position: absolute;
-                        margin: 0;
-                        padding: 0;
-                        width: 5px;
-                        background-color: $main-color;
-                    }
-                }
-                a {
-                    text-decoration: none;
-                }
-            }
-        }
-    }
-    hr {
-        display: block;
-        margin-top: 0.5em;
-        margin-bottom: 0.5em;
-        margin-left: auto;
-        margin-right: auto;
-        border-style: inset;
-        border-width: 1px;
-    }
+nav {
+	position: fixed;
+}
+
+// Toogle button
+
+#menuToggle {
+	display: block;
+	position: relative;
+	z-index: 1;
+	input {
+		display: block;
+		width: 40px;
+		height: 32px;
+		position: absolute;
+		top: -7px;
+		left: -5px;
+		cursor: pointer;
+		opacity: 0;
+		z-index: 2;
+		&:checked ~ .hb { // changing bars into a crossmark
+			opacity: 1;
+			transform: rotate(45deg) translate(-2px, -1px);
+			background: lightgrey;
+			&:nth-last-child(3) { // hiding the middle bar
+				opacity: 0;
+				transform: rotate(0deg) scale(0.2, 0.2);
+			}
+			&:nth-last-child(2) { // the last one goes in the other direction
+				transform: rotate(-45deg) translate(0, -1px);
+			}
+		}
+		&:checked ~ #menu { //sliding menu from the left
+			transform: none;
+		}
+	}
+}
+
+// Hamburger
+
+#menuToggle .hb {
+	display: block;
+	width: 33px;
+	height: 4px;
+	margin-bottom: 5px;
+	position: relative;
+	background: $dark-grey;
+	border-radius: 3px;
+	z-index: 1;
+	transform-origin: 4px 0px;
+	transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+				background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+				opacity 0.55s ease;
+	&:first-child {
+		transform-origin: 0% 0%;
+	}
+	
+	&:nth-last-child(2) {
+		transform-origin: 0% 100%;
+	}
+}
+
+// Menu
+
+#menu {
+	height: 150vh;
+	width: 250px;
+	position: absolute;
+	top: 0;
+	overflow-y: auto;
+	margin: -100px 0 0 -40px;
+	padding-top: 100px;
+	background: $dark-grey;
+	color: $font-color;
+	transform-origin: 0% 0%;
+	transform: translate(-100%, 0);
+	transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+	.logo {
+		font-family: 'Bubblegum Sans', cursive;
+		padding-left: 100px;
+		font-size: 24px;
+		margin-bottom: 10px;
+		color: white;
+	}
+	ul {
+		padding-left: 20px;
+		li {
+			display: flex;
+			align-items: center;
+		}
+	}
+	.user-profile {		// manager section
+		padding-left: 20px;	
+		margin-top: 20px;		
+		#manager {
+			padding: 20px 20px 0 20px;
+			border-top: solid 1px grey;
+			text-transform: uppercase;
+			font-weight: bold;
+		}
+		.profile-pic {
+			display: flex;
+			align-items: center;
+			padding: 20px;
+			#pic {
+				background: white;
+				border-radius: 50%;
+				margin-right: 15px;
+				position: relative;
+				img {
+					position: relative;
+					height: 40px;
+					border-radius: 50%;
+					width: 40px;
+					background-size: cover;
+				}
+				.notification-bubble {
+					top: 0;
+					background: $green;
+					height: 10px;
+					width: 10px;
+				}
+			}
+		}
+	}
+}
+
+/*
+	MEDIA QUERIES
+*/
+
+@media(min-width: 992px) {
+	nav {
+		position: fixed;
+	};
+	
+	// Toogle button
+
+	#menuToggle {
+		top: -60px;
+		transform: none;
+		input {
+			display: block;
+			width: 40px;
+			height: 32px;
+			position: absolute;
+			top: -7px;
+			left: -5px;
+			opacity: 0;
+			z-index: 3;
+			transform: none;
+		}
+	};
+
+	// Hamburger
+
+	#menuToggle .hb {
+		display: block;
+		width: 33px;
+		height: 4px;
+		margin-bottom: 5px;
+		position: relative;
+		background: white;
+		border-radius: 3px;
+		z-index: 2;
+		transform: none;
+	};
+
+	// Menu
+
+	#menu {
+		height: 150vh;
+		width: 100%;
+		position: absolute;
+		top: 0;
+		background: $dark-grey;
+		color: $font-color;
+		transform: translate(0, 0);	
+		.logo {
+			font-family: 'Bubblegum Sans', cursive;
+			font-size: 24px;
+			margin-bottom: 10px;
+			color: white;
+		}
+		.user-profile {					// manager section
+			#manager {
+				padding: 20px;
+				padding-bottom: 0;
+				border-top: solid 1px grey;
+				text-transform: uppercase;
+				font-weight: bold;
+			}
+			.profile-pic {
+				display: flex;
+				align-items: center;
+				padding: 20px;
+				cursor: pointer;
+			}
+		}
+	};
 }
