--- a/sass/components/_form-field-scale.scss
+++ b/sass/components/_form-field-scale.scss
@@ -8,6 +8,8 @@
     .slide-container {
         width: 100%;
         position: relative;
+        justify-content: space-between;
+        flex-direction: row;
         @media(max-width: 991px) {
             margin-bottom: 60px;
         }
@@ -73,8 +75,9 @@
             }
         }
         #rangeValue {
-            position: relative;
-            margin-top: 10px;
+            display: flex;
+            justify-content: center;
+            margin-top: 30px;
         }
     }
 }
@@ -82,14 +85,13 @@
 
 /* MOVING VALUE BUBBLE */
 
-output { 
+#triangle { 
     position: absolute;
     width: 40px; 
     height: 30px; 
-    text-align: center; 
     display: inline-block; 
-    top: 250%;
-    left: 0;
+    top: 70%;
+    left: 47%;
     &:after { 
         content: "";
         position: absolute; 
