--- a/sass/components/_form-field-checkbox.scss
+++ b/sass/components/_form-field-checkbox.scss
@@ -10,6 +10,7 @@
         font-weight: normal;
         padding: 10px 0;
         padding-right: 20px;
+        line-height: $line-height;
         div {
             display: flex;
             align-items: center;
