--- a/sass/sections/_links.scss
+++ b/sass/sections/_links.scss
@@ -1,5 +1,8 @@
-@media(min-width: 992px) {
+@media(min-width: 1200px) {
     #links-section {
         margin-top: 80px;
+        #links {
+            padding-left: 0 !important;
+        }
     };
 }
